# estudandoFastAPI

./: .gitignore  DockerfileSim  Dockerfilepoetry  README.md  pyproject.toml  requirements.txt
estudandoFastAPI/: aaassda.py  asdf.py  corsss.py  fakejwt.py  jinjaexemple.py  jwtfuncional.py  log.txt  main.py  pratest.py  server.py  socket2.py  soketi1.py
estudandoFastAPI/dbsql/: database.py  main.py  models.py  schemas.py
estudandoFastAPI/infos/: metadata.py
estudandoFastAPI/infra/: crud.py  database.py
estudandoFastAPI/middleware/: main.py
estudandoFastAPI/routes/: cokiesss.py  outrarota.py  rotaYaml.py  routes.py
estudandoFastAPI/security/: authenticate.py  fakeDB.py  main.py  routerSafe.py  securityModels.py
estudandoFastAPI/subAplication/: main.py
estudandoFastAPI/templates/: item.html
tests/: test_estudando.py
