[tool.poetry]
name = "estudandofastapi"
version = "0.1.0"
description = ""
authors = ["alexandrejastrow <alexandre.jastrow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
SQLAlchemy = "^1.4.31"
databases = "^0.5.5"
aiosqlite = "^0.17.0"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"
hypercorn = {extras = ["trio"], version = "^0.13.2"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
